# DRF-project-1

./: .env sample  README.md  data.json  education.json  groups.json  pyproject.toml  requirements.txt  users.json
config/: celery.py  settings.py  urls.py
education/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner.py  0004_lesson_owner.py  0005_course_price_lesson_price.py  0006_alter_course_price_alter_lesson_price.py  0007_remove_course_price_remove_lesson_price.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_paid_course_and_more.py  0004_subscriptions.py  0005_alter_payments_paid_lesson.py  0006_payments_link_payments_session_id.py  0007_remove_subscriptions_subscription.py  0008_rename_paid_lesson_payments_lesson_and_more.py
