[tool.poetry]
name = "python1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
ipython = "^8.29.0"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.4"
drf-yasg = "^1.21.8"
stripe = "^11.2.0"
forex-python = "^1.8"
celery = "^5.4.0"
redis = "^5.2.0"
django-cors-headers = "^4.6.0"
django-celery-beat = "^2.7.0"
eventlet = "^0.37.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
